# boundaryRecognitionWeb

./: .env  .gitignore  README.md  docker-compose.yml
client/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
frontend/: Dockerfile  app.py
postgres/: init.sql
service/: CMakeLists.txt  Dockerfile
service/include/: boundaryRecognition.h  server.h
service/src/: boundaryRecognition.cpp  boundaryRecognition.h  main.cpp  server.cpp
